refactor: implemented link between Person and Foodline